# robo_lib

./: README.md
src/aux/plot_lib/: CMakeLists.txt
src/aux/plot_lib/include/plot_lib/: qt_plot.h
src/aux/plot_lib/src/: qcustomplot.cpp  qt_plot.cpp
src/python_api/: kinematic_chain.py
src/robo_lib/: CMakeLists.txt
src/robo_lib/include/robo_lib/: kinematic_chain.h  trajectory.h
src/robo_lib/include/robo_lib/_utils/: math.h
src/robo_lib/src/: kinematic_chain.cpp  tool_estimator.cpp  trajectory.cpp
src/robo_lib/src/_utils/: math.cpp  xml_parser.cpp
src/test/robo_lib_test/: CMakeLists.txt  package.xml
src/test/robo_lib_test/launch/: kinematic_chain_test.launch
src/test/robo_lib_test/rviz/: cfg.rviz
src/test/robo_lib_test/src/: cart_space_trajectory.cpp  kinematic_chain_test.cpp
src/test/robo_lib_test/urdf/: robot_description.urdf
