<?xml version="1.0"?>
<package>
  <name>robo_lib_test</name>
  <version>0.0.1</version>
  <description>robo_lib test package package</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>robo_lib</build_depend>
  <run_depend>robo_lib</run_depend>

  <build_depend>plot_lib</build_depend>
  <run_depend>plot_lib</run_depend>

</package>
